# CPP20_Modules_Skeleton

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CMake/: .clangd  config.cmake
Source/: CMakeLists.txt  Module.ixx  World.cpp  World.ixx  main.cpp
